welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: not found: value casOrange
while(2 * nbB < caseOrange + 1 || 2 * nbB > casOrange + 1){avance()
                                            ^RunHalf:8: error: not found: value estSurcaseOrange
if(estSurcaseOrange){caseOrange = caseOrange + 1}}} 
   ^